<resources>
    <string name="FACEBOOK_APP_ID">396539761213193</string>
    <string name="FACEBOOK_PROTOCOL_SCHEME">fb396539761213193</string>
    <string name="GEO_API_KEY">AIzaSyBwDxrCSbZrcbU2csQbuHOPKRrlKrX8KL8</string>
    <string name="RAZORPAY_KEY">rzp_live_gRkt6VcmPkqt61</string>
    <string name="Refferal_code">Referral Code</string>
    <string name="SERVER_CLIENT_ID">20398625103-4c08dulbjiq5btbc7v4o0pja36hf0jd3.apps.googleusercontent.com</string>
    <string name="Successful_Disbursement">Successful Disbursement</string>
    <string name="aadhaar_discount">AADHAAR Discount</string>
    <string name="aadhaar_kyc">AADHAAR KYC</string>
    <string name="aadhaar_number_optional">Aadhaar Number</string>
    <string name="aadhar_capture">Aadhaar Capture</string>
    <string name="aadhar_card">Aadhaar Card</string>
    <string name="aadhar_card_upload">Upload Aadhaar</string>
    <string name="aadhar_erro_msg_link">Got Error, Try Again</string>
    <string name="aadhar_headertext">You can complete your KYC by using your AADHAAR number and the OTP sent to the mobile or email registered on your AADHAAR number.</string>
    <string name="aadhar_otp_text">An OTP has been sent via SMS</string>
    <string name="aadharr_footer">Connect your AADHAAR, get 25 off on Processing Fees. Your loan will be approved much faster as you do not need to submit Proof of ID and Proof of Address</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_title">About Kissht</string>
    <string name="about_us">About Us</string>
    <string name="about_us_content">"&lt;p>The Kissht App allows you to buy all items from within the App. You can see all of our Merchant Partners within our app or choose to buy items from the Kissht store. You can also use to app to upload your documents and to make the downpayment and processing fees.&lt;/p>

&lt;p>For customers who have ongoing loans, you can use the app to check your available line of credit or to make an early payment or to view upcoming EMIs and Invoices for the same.&lt;/p>

&lt;p>&amp;copy; 2019 Kissht. ALL RIGHTS RESERVED. kissht.com (ONEMi Technology Solutions Private Limited) is an EMI payment and digital lending platform. With a variety of EMI payment options like EMI on Credit Card, EMI on Debit Card &amp;amp; EMI without Card, Kissht (ONEMi) aims at empowering online as well as offline Merchant stores to provide easy and quick EMI to customers who wish to purchase Mobiles, Laptops, Jewelry, Cameras, Furniture&amp;rsquo;s, AC, Watches, Home &amp;amp; Kitchen Appliances, Tour Package, Health Packages and many more on easy EMI through our tie ups with 20 + financial Institutions across the country. Our unique EMI payment gateway makes aspiration affordable to all. Our EMI payment gateway allows our merchant partners to offer quick loan EMI, Credit card EMI as well as select Debit card EMI from various leading Banks and NBFCs including HDFC, HSBC, CITI Bank, Kotak, IndusInd, ICICI, Axis, Standard Chartered, SBI Bank, RBL Bank &amp;amp; Bajaj FinServ. India's largest EMI centric payment solution company, Kissht offers a hassle-free experience of shopping online as well as offline Merchant stores by offering quick and Easy EMI at Point of Sale. Our EMI Payments Gateway integration uses super simple APIs to go live instantly. With a wide range of products across various categories and convenient EMIs on debit cards, credit cards &amp;amp; quick loan EMI, get set to enjoy a simple, stress-free and smart online as well as offline shopping experience with Kissht ( ONEMi )&lt;/p>"</string>
    <string name="acc_holder_not_match">Account holders name does not match with the application name, Please Select your Own Account or Add new Bank Details</string>
    <string name="accept_tc">Please Accept Terms &amp; Conditions</string>
    <string name="account">Account</string>
    <string name="account_number_dash">Account Number -</string>
    <string name="account_settings">Account Settings</string>
    <string name="action_settings">Settings</string>
    <string name="activate_dec">Activate Digital EMI Card</string>
    <string name="add_bank_details">Please add Bank Details</string>
    <string name="add_document">Add Document</string>
    <string name="add_new_address">Add New Address</string>
    <string name="add_new_upi_id">ADD NEW UPI ID</string>
    <string name="additional_info">Additional Info</string>
    <string name="address_error_msg">Please select address</string>
    <string name="address_line_1_err_msg">Please enter address</string>
    <string name="address_select_err_msg">Please select residence info for selected address</string>
    <string name="agreement">Agreement</string>
    <string name="agreement_form">Agreement Form</string>
    <string name="agreement_letter">Agreement Letter</string>
    <string name="alert_gf_ok">OK</string>
    <string name="align_pan_card_in_the_box_it_will_scan_automatically">Align Pan Card in the Box. It will scan automatically.</string>
    <string name="already_facebook_connected">Already connected with Facebook!</string>
    <string name="already_google_connected">Already connected with Google!</string>
    <string name="amazon_note">We need your personal and income details to process your purchase and loan</string>
    <string name="amazon_voucher">AMAZON Voucher</string>
    <string name="amount">Amount :</string>
    <string name="amount_due">Amount Due</string>
    <string name="and_save">&amp; save on extra charges</string>
    <string name="app_name">SHYA Finance</string>
    <string name="app_not_downloaded">App is not downloaded, please ask user to download the App.</string>
    <string name="app_upgrade_dialog_title">Hey ! We have added a bunch of new features in the latest version of Kissht. Unfortunately we are unable to support the current version of the app you are using and we will request you to upgrade the app before you can proceed.</string>
    <string name="app_upgrade_submit">Upgrade</string>
    <string name="app_upgrade_title">Upgrade Kissht</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="application_fwd_merchant">Your loan application has been forwarded to the merchant.</string>
    <string name="application_received">Application Received</string>
    <string name="application_status">Application Status</string>
    <string name="apply">Apply</string>
    <string name="apply_now_and_money_is_deposited_into_your_bank_account_in_72_hours">Apply now and money is deposited into your bank account in 72 hours.</string>
    <string name="approve_loan">Complete next steps so we can &lt;b>&lt;font color=#32CD32>Approve your loan.&lt;/b> Takes 5 minutes.</string>
    <string name="are_you_sure_you_want_to_cancel_this_order">Are you sure you want to cancel this order ?</string>
    <string name="auth_failed">Authentication Failure</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="avail_a_loan_toward_a_recent_purchase_and_pay_us_back_in_easy_installments">Avail a loan toward a recent purchase and pay us back in easy installments.</string>
    <string name="avoid_blur">Avoid Blur</string>
    <string name="back">Back</string>
    <string name="back_side">Back Side</string>
    <string name="bank_account_details">Bank Account Details</string>
    <string name="bank_details">Bank Details</string>
    <string name="bank_details_link_aadhaar">I have linked this Bank Account with my Aadhaar Number</string>
    <string name="bank_transfer">Bank Transfer</string>
    <string name="bank_transfer_note"><b>Note:</b>" You can make IMPS/NEFT via bank website to Avoid convenience fees.

"<html><font color="#ef473a">DO NOT use the above mentioned account number for UPI payments (e.g., GooglePay, PhonePe, etc.)</font></html></string>
    <string name="bank_verification_failed">Bank Verification Failed, Kindly select an existing bank or add Bank details</string>
    <string name="barcode_error">Error reading barcode: %1$s</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_header">Click Read Barcode to read a barcode</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="basic_information">Basic Information</string>
    <string name="bhim">BHIM</string>
    <string name="boost_your_emi_card_limit">Boost your EMI Card limit</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="brands">Brands</string>
    <string name="btn_lable_save_information">Save Information</string>
    <string name="enter_the_otp_received_on_your_mobile">Enter the OTP received on your mobile</string>
    <string name="login_with_your_registered_mobile_number">Login with your registered Mobile Number</string>
    <string name="submit">SUBMIT</string>
    <string name="text_get_otp">Get OTP</string>
    <string name="text_mobile_number">Mobile Number</string>
    <string name="text_note_not_exsting_user">If you are not an existing customer then please go back and create an account</string>
    <string name="text_otp">OTP</string>
    <string name="text_resend_question">Resend?</string>
</resources>